# rail-timetable-search

./: README.md  pyproject.toml
src/rail_nextday/: cli.py  gtfs_loader.py  timetable.py
testenv/: pyvenv.cfg
testenv/Scripts/: activate  activate.bat
