[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[project]
name = "rail-nextday"
version = "0.0.1"
description = "CLI to print next-day train timetables from open GTFS."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name="Your Name"}]
dependencies = ["pandas>=2.2"]

[project.scripts]
rail-nextday = "rail_nextday.cli:main"
